# Robo-Clerk

./: .gitignore  README.md  pyproject.toml
docs/: About.md  file_features.schema.json
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/axios/: apiClient.js
frontend/src/components/Header/: Header.jsx
frontend/src/layouts/: BaseLayout.jsx
frontend/src/pages/: Home.jsx  HowItWorks.jsx  NotFound.jsx  Review.jsx
frontend/src/routes/: index.jsx
notebooks/: DOCXparserJB.ipynb  PDFparserJB.ipynb
src/: jb_api.py  robot_clerk.py
src/robo_clerk/: jb_api.py  robo_clerk.py  robo_processor.py  server.py
src/robo_clerk/decider/: judge.py
src/robo_clerk/doc_processors/: doc_master.py  docx.py  pdf.py  png.py  process_file.py  process_file_sambanova.py  structured_data_to_file.py  test_png.py  text_extractor.py  types.py
src/robo_clerk/utils/: file.py
src/tests/: evaluate_file.py
