[tool.poetry]
name = "robo-clerk"
version = "0.1.0"
description = "This is the robo clerk"
authors = ["Alexandru But <butalexandru@gmail.com>"]
readme = "README.md"
packages = [{ include = "robo_clerk", from = "src" }]

[tool.poetry.scripts]
robo_clerk = "robo_clerk.robo_clerk:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
load-dotenv = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
