[tool.poetry]
name = "robo-clerk"
version = "0.1.0"
description = "This is the robo clerk"
authors = ["Alexandru But <butalexandru@gmail.com>"]
readme = "README.md"
packages = [{ include = "robo_clerk", from = "src" }]

[tool.poetry.scripts]
robo-clerk = "robo_clerk.robo_clerk:play_game"
robo-processor = "robo_clerk.robo_processor:process_test_data"
robo-server = "robo_clerk.server:run_server"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
load-dotenv = "^0.1.0"
pypdf2 = "^3.0.1"
pdfplumber = "^0.11.6"
ipykernel = "^6.29.5"
pytesseract = "^0.3.13"
pillow = "^11.1.0"
regex = "^2024.11.6"
python-docx = "^1.1.2"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
nltk = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
